reminder endpoints
